# GRYPHGEN

./: README.md  System Overview.txt  System_overview.md
LLM-Sandbox CLI/ShellGenie/: .env.example  .gitignore  Makefile  README.md  cshellgenie.md  llama3_focus.md  pyproject.toml  readme.md
LLM-Sandbox CLI/ShellGenie/config/: config.yaml
LLM-Sandbox CLI/ShellGenie/docker/: Dockerfile  docker-compose.yml
LLM-Sandbox CLI/ShellGenie/docs/: ARCHITECTURE.md  SECURITY.md
LLM-Sandbox CLI/ShellGenie/examples/: basic_usage.py
LLM-Sandbox CLI/ShellGenie/legacy/: README.md  llama3_focus.md  llama3_focus_bash.sh
LLM-Sandbox CLI/ShellGenie/scripts/: setup.sh
LLM-Sandbox CLI/ShellGenie/src/shellgenie/: __init__.py  cli.py  core.py  models.py  security.py  utils.py
LLM-Sandbox CLI/ShellGenie/tests/: __init__.py  test_core.py  test_security.py  test_utils.py
MCP_SERVER/Sept_16_2025/mcp-reliability-system/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  SECURITY.md  mcp-reliability-system.cabal
MCP_SERVER/Sept_16_2025/mcp-reliability-system/app/: Main.hs
MCP_SERVER/Sept_16_2025/mcp-reliability-system/bench/: Main.hs
MCP_SERVER/Sept_16_2025/mcp-reliability-system/config/: production.yaml
MCP_SERVER/Sept_16_2025/mcp-reliability-system/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
MCP_SERVER/Sept_16_2025/mcp-reliability-system/docs/: ARCHITECTURE.md
agentic/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  agent_builder_api.md  agentic.md  alembic.ini  docker-compose.yml  docker.md  kafka.md  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
agentic/.github/workflows/: ci.yml  gpu-tests.yml
agentic/alembic/: README  env.py
agentic/configs/: gpu_config.yaml  prometheus.yml
agentic/docker/: Dockerfile.api-gateway  Dockerfile.automated-testing  Dockerfile.code-generation  Dockerfile.collaboration  Dockerfile.documentation  Dockerfile.project-management  Dockerfile.self-improvement
agentic/docs/: ARCHITECTURE.md  GPU_OPTIMIZATION.md
agentic/docs/architecture/: agentic.md  software_agent_builder.md
agentic/docs/deployment/: kafka.md  managed.md
agentic/examples/: code_generation_example.py  project_management_example.py
agentic/k8s/base/: api-gateway-deployment.yaml  code-generation-deployment.yaml  ingress.yaml  namespace.yaml
agentic/src/api/: __init__.py  main.py
agentic/src/auth/: __init__.py  dependencies.py  jwt_handler.py  password.py
agentic/src/common/: __init__.py  config.py  logger.py
agentic/src/database/: __init__.py  models.py  session.py
agentic/src/kafka/: __init__.py  consumer.py  producer.py  topics.py
agentic/src/services/: __init__.py
agentic/src/services/automated_testing/: __init__.py  generator.py  main.py  models.py  router.py
agentic/src/services/code_generation/: __init__.py  generator.py  main.py  models.py  router.py
agentic/src/services/collaboration/: __init__.py  main.py  router.py
agentic/src/services/documentation/: __init__.py  main.py  router.py
agentic/src/services/project_management/: __init__.py  main.py  models.py  optimizer.py  router.py
agentic/src/services/self_improvement/: __init__.py  main.py  router.py
agentic/src/utils/: __init__.py  gpu_utils.py  model_utils.py
agentic/src/websockets/: __init__.py  manager.py  router.py
agentic/tests/: __init__.py  conftest.py  test_code_generation.py  test_project_management.py
agentic/tests/integration/: test_services.py
agentic/tests/unit/: test_api.py  test_code_generation.py  test_gpu_utils.py
agentic/webui/: README.md
calisota-ai/August_2025/novelty-llm-system/: .env.example  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
calisota-ai/August_2025/novelty-llm-system/config/: development.yaml  production.yaml
calisota-ai/August_2025/novelty-llm-system/docker/: Dockerfile  docker-compose.yml  prometheus.yml
calisota-ai/August_2025/novelty-llm-system/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
calisota-ai/August_2025/novelty-llm-system/scripts/: setup.sh
calisota-ai/August_2025/novelty-llm-system/src/: __init__.py
calisota-ai/August_2025/novelty-llm-system/tests/: test_cache.py  test_novelty.py
calisota-ai/July-28-2025/tt-metal/: CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  descript.md  dynamic_cortex.md  readme.md
calisota-ai/feb07/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  actor-critic-RAG-API-logging.md  actor-critic-RAG-logging-Human-loop.md  actor-critic.md  calisota_engine_v3.md  docker-compose.yml  pyproject.toml  suggestions.md
calisota-ai/feb07/RAG/: raid.md  swimlane.md
calisota-ai/feb07/calisota-feb/: 3m-classes.md  3m-entity-relations.md  3m-motev4nsr.md
calisota-ai/feb07/config/: prometheus.yml
calisota-ai/feb07/docs/: ARCHITECTURE.md
calisota-ai/feb07/scripts/: benchmark.py  init_faiss.py
calisota-ai/feb07/tests/: __init__.py  conftest.py  test_api.py  test_rag.py
jan13/agents/: .gitignore  Makefile  README.md  nginx_reverseprox.md  ollama_problems.md  pyproject.toml  requirements-dev.txt  requirements.txt
jan13/agents/configs/: agent.yaml  nginx.conf.template  ollama.service.template
jan13/agents/docker/: Dockerfile  docker-compose.yml  prometheus.yml
jan13/agents/examples/: advanced_deployment.py  basic_usage.py  gpu_optimization.py
jan13/agents/src/: __init__.py
jan13/agents/tests/: __init__.py  test_agents.py  test_api.py
rag/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
rag/.github/workflows/: ci.yml
rag/cag/: __init__.py  cache_manager.py  cag_engine.py  db_interface.py  kv_cache.py
rag/common/: __init__.py  config.py  gpu_utils.py  utils.py
rag/docs/: cag_original.md  simgrag_detailed.md  simgrag_original.md
rag/examples/: cag_example.py  simgrag_example.py
rag/simgrag/: __init__.py  gsd_calculator.py  pattern_generator.py  simgrag_engine.py  subgraph_retriever.py
rag/tests/: __init__.py  test_cag.py  test_common.py  test_simgrag.py
(+306 files in other folders)
