[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gryphgen-agentic"
version = "0.1.0"
description = "AI-powered development assistant with autonomous code generation, testing, and project management"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "GRYPHGEN Team"},
]
keywords = [
    "ai",
    "machine-learning",
    "code-generation",
    "automated-testing",
    "project-management",
    "microservices",
    "llm",
    "transformers",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "torch>=2.5.1",
    "transformers>=4.46.3",
    "openai>=1.57.2",
    "anthropic>=0.42.0",
    "kafka-python>=2.0.2",
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.36",
    "prometheus-client>=0.21.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "loguru>=0.7.3",
    "click>=8.1.8",
    "httpx>=0.28.1",
    "aiofiles>=24.1.0",
    "tiktoken>=0.8.0",
    "einops>=0.8.0",
    "safetensors>=0.4.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "black>=24.10.0",
    "isort>=5.13.2",
    "flake8>=7.1.1",
    "mypy>=1.13.0",
    "pylint>=3.3.2",
    "pre-commit>=4.0.1",
    "bandit>=1.8.0",
    "safety>=3.2.11",
    "ipython>=8.30.0",
    "ipdb>=0.13.13",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.50",
    "mkdocstrings[python]>=0.27.0",
    "mkdocs-autorefs>=1.2.0",
    "pymdown-extensions>=10.12",
]

gpu = [
    "cupy-cuda12x>=13.3.0",
    "nvidia-ml-py>=12.560.30",
    "pynvml>=11.5.3",
]

ml = [
    "accelerate>=1.2.1",
    "bitsandbytes>=0.45.0",
    "sentence-transformers>=3.3.1",
    "pytorch-lightning>=2.4.0",
    "tensorboard>=2.18.0",
    "wandb>=0.18.7",
]

rl = [
    "gymnasium>=1.0.0",
    "stable-baselines3>=2.4.0",
    "ray[rllib]>=2.39.0",
]

nlp = [
    "spacy>=3.8.2",
    "nltk>=3.9.1",
    "langchain>=0.3.13",
    "langchain-openai>=0.2.14",
    "llama-index>=0.12.11",
]

all = [
    "gryphgen-agentic[dev,docs,gpu]",
]

[project.urls]
Homepage = "https://github.com/danindiana/GRYPHGEN"
Documentation = "https://github.com/danindiana/GRYPHGEN/tree/main/agentic/docs"
Repository = "https://github.com/danindiana/GRYPHGEN"
Issues = "https://github.com/danindiana/GRYPHGEN/issues"

[project.scripts]
agentic = "agentic.cli:main"
agentic-server = "agentic.api.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["agentic*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "kafka.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU (deselect with '-m \"not gpu\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
]

[tool.pylint.format]
max-line-length = 100
