[tool.poetry]
name = "calisota-ai-engine"
version = "1.0.0"
description = "CALISOTA - Autonomous AI-powered software generation system with RAG, Actor-Critic ensembles, and multi-language sandboxes"
authors = ["GRYPHGEN Team"]
readme = "README.md"
license = "MIT"
keywords = ["ai", "llm", "rag", "faiss", "actor-critic", "code-generation", "autonomous-systems"]

[tool.poetry.dependencies]
python = "^3.11"
# Web Framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"

# AI/ML Libraries
torch = "^2.5.1"
transformers = "^4.46.2"
langchain = "^0.3.7"
langchain-community = "^0.3.5"
langchain-openai = "^0.2.5"
openai = "^1.54.4"
anthropic = "^0.39.0"

# Vector Database & RAG
faiss-gpu = "^1.7.2"
sentence-transformers = "^3.2.1"
chromadb = "^0.5.20"

# GPU Acceleration
nvidia-cuda-runtime-cu12 = "^12.6.77"
nvidia-cudnn-cu12 = "^9.5.1.17"

# Data Processing
numpy = "^2.1.3"
pandas = "^2.2.3"
scipy = "^1.14.1"

# Async & Parallel Processing
aiohttp = "^3.11.7"
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.2.0"

# Code Execution & Sandboxing
docker = "^7.1.0"
kubernetes = "^31.0.0"

# Monitoring & Logging
prometheus-client = "^0.21.0"
structlog = "^24.4.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.18.0"}

# Testing
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.27.2"

# Development Tools
black = "^24.10.0"
ruff = "^0.7.4"
mypy = "^1.13.0"
pre-commit = "^4.0.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"
jupyter = "^1.1.1"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/calisota --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["src/calisota"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
