
cabal-version: 3.0
name: mcp-reliability-system
version: 0.2.0.0
synopsis: Production-ready MCP tool execution platform with reliability and security
description: A comprehensive Haskell system for reliable and secure MCP (Model Context Protocol) tool execution, featuring circuit breakers, intelligent fallback selection, caching, security validation, and real MCP integration.
homepage: https://github.com/danindiana/GRYPHGEN
bug-reports: https://github.com/danindiana/GRYPHGEN/issues
license: MIT
license-file: LICENSE
author: GRYPHGEN Team
maintainer: gryphgen@example.com
copyright: 2025 GRYPHGEN Team
category: Network, Security, AI
build-type: Simple
extra-source-files:
    CHANGELOG.md
    README.md
    docs/*.md
    config/*.yaml
tested-with: GHC == 9.4.8, GHC == 9.6.4, GHC == 9.8.1

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules
                 -Wpartial-fields -Wredundant-constraints

library
    import: warnings
    exposed-modules:
        -- Core Reliability System
        MCP.Reliability.CircuitBreaker
        MCP.Reliability.Fallback
        MCP.Reliability.Cache
        MCP.Reliability.Metrics
        MCP.Reliability.Types
        
        -- Security Validation System
        MCP.Security.ParameterGuard
        MCP.Security.Sandbox
        MCP.Security.Permissions
        MCP.Security.InputSanitization
        MCP.Security.Types
        
        -- Real MCP Integration
        MCP.Protocol.Client
        MCP.Protocol.Server
        MCP.Protocol.Discovery
        MCP.Protocol.Transport
        MCP.Protocol.Types
        MCP.Protocol.JsonRPC
        
        -- Core System
        MCP.Core.Engine
        MCP.Core.Types
        MCP.Core.Config
        
        -- Monitoring and Observability
        MCP.Monitoring.Prometheus
        MCP.Monitoring.Logging
        MCP.Monitoring.Health
        
    build-depends:
        base >= 4.17 && < 5,
        aeson >= 2.2 && < 2.3,
        async >= 2.2 && < 2.3,
        bytestring >= 0.11 && < 0.13,
        containers >= 0.6 && < 0.8,
        cryptonite >= 0.30 && < 0.31,
        directory >= 1.3 && < 1.4,
        exceptions >= 0.10 && < 0.11,
        filepath >= 1.4 && < 1.6,
        hashable >= 1.4 && < 1.5,
        http-client >= 0.7 && < 0.8,
        http-client-tls >= 0.3 && < 0.4,
        http-types >= 0.12 && < 0.13,
        lens >= 5.2 && < 5.4,
        memory >= 0.18 && < 0.19,
        mtl >= 2.3 && < 2.4,
        network >= 3.1 && < 3.2,
        process >= 1.6 && < 1.7,
        prometheus-client >= 1.1 && < 1.2,
        random >= 1.2 && < 1.3,
        regex-tdfa >= 1.3 && < 1.4,
        safe >= 0.3 && < 0.4,
        scientific >= 0.3 && < 0.4,
        stm >= 2.5 && < 2.6,
        text >= 2.0 && < 2.2,
        time >= 1.12 && < 1.15,
        transformers >= 0.6 && < 0.7,
        unix >= 2.8 && < 2.9,
        unordered-containers >= 0.2 && < 0.3,
        uuid >= 1.3 && < 1.4,
        vector >= 0.13 && < 0.14,
        wai >= 3.2 && < 3.3,
        warp >= 3.3 && < 3.5,
        websockets >= 0.13 && < 0.14,
        yaml >= 0.11 && < 0.12
        
    hs-source-dirs: src
    default-language: Haskell2010

executable mcp-server
    import: warnings
    main-is: Main.hs
    build-depends:
        base,
        mcp-reliability-system,
        optparse-applicative >= 0.17
    hs-source-dirs: app
    default-language: Haskell2010

test-suite mcp-reliability-tests
    import: warnings
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Spec.hs
    other-modules:
        MCP.Reliability.CircuitBreakerSpec
        MCP.Security.ParameterGuardSpec
        MCP.Protocol.ClientSpec
        MCP.Core.EngineSpec
    build-depends:
        base,
        mcp-reliability-system,
        hspec >= 2.11 && < 2.12,
        hspec-discover >= 2.11 && < 2.12,
        QuickCheck >= 2.14 && < 2.15,
        async,
        stm,
        hspec-expectations >= 0.8

benchmark mcp-benchmarks
    import: warnings
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    hs-source-dirs: bench
    main-is: Main.hs
    other-modules:
        MCP.Benchmarks.Reliability
        MCP.Benchmarks.Security
        MCP.Benchmarks.Protocol
    build-depends:
        base,
        mcp-reliability-system,
        criterion >= 1.6 && < 1.7,
        deepseq >= 1.5 && < 1.6,
        random,
        tasty-bench >= 0.3
