[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novelty-llm-system"
version = "0.1.0"
description = "A scalable LLM platform with novelty scoring, semantic caching, and multi-tenant support"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0"}
authors = [
    {name = "GRYPHGEN Contributors", email = "contributors@gryphgen.dev"}
]
keywords = ["llm", "novelty", "caching", "semantic-search", "embeddings", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Async support
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "aiokafka>=0.11.0",

    # LLM and embeddings
    "ollama>=0.4.0",
    "sentence-transformers>=3.2.0",
    "transformers>=4.46.0",
    "torch>=2.5.0",

    # Vector databases and caching
    "faiss-cpu>=1.9.0",
    "pymilvus>=2.4.0",
    "redis[hiredis]>=5.2.0",

    # Database
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "alembic>=1.14.0",

    # Object storage
    "boto3>=1.35.0",
    "minio>=7.2.0",

    # Observability
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",

    # Security and auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",

    # Data processing
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",

    # PII detection and anonymization
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",

    # Document processing
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "pytesseract>=0.3.13",
    "pillow>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

gpu = [
    "faiss-gpu>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/danindiana/GRYPHGEN"
Documentation = "https://github.com/danindiana/GRYPHGEN/tree/main/calisota-ai/August_2025/novelty-llm-system/docs"
Repository = "https://github.com/danindiana/GRYPHGEN"
Issues = "https://github.com/danindiana/GRYPHGEN/issues"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"
